2010-01-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/42705
	* tree-ssa-reassoc.c (build_and_add_sum): Insert stmts after
	labels.

2010-01-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42716
	* fold-const.c (fold_unary_loc): Fold INDIRECT_REFs.

2010-01-13  Jakub Jelinek  <jakub@redhat.com>

	PR debug/41371
	* var-tracking.c (values_to_unmark): New variable.
	(find_loc_in_1pdv): Clear VALUE_RECURSED_INTO of values in
	values_to_unmark vector.  Moved body to...
	(find_loc_in_1pdv_1): ... this.  Don't clear VALUE_RECURSED_INTO,
	instead queue it into values_to_unmark vector.
	(vt_find_locations): Free values_to_unmark vector.

2010-01-13  Wolfgang Gellerich  <gellerich@de.ibm.com>

	* config/s390/s390.c (override_options): Set
	default of max-pending-list-length to 256

2010-01-13  Richard Guenther  <rguenther@suse.de>

	PR lto/42678
	* tree-pass.h (PROP_gimple_lcx): New.
	* cfgexpand.c (pass_expand): Require PROP_gimple_lcx.
	* passes.c (init_optimization_passes): Move pass_lower_complex_O0
	before the final cleanup_eh.
	(dump_properties): Dump PROP_gimple_lcx.
	* tree-complex.c (pass_lower_complex): Provide PROP_gimple_lcx.
	(tree_lower_complex_O0): Remove.
	(gate_no_optimization): Run if PROP_gimple_lcx is not set.
	(pass_lower_complex_O0): Provide PROP_gimple_lcx.  Run
	tree_lower_complex, schedule TODO_update_ssa.
	* lto-streamer-out.c (output_function): Stream the functions
	properties.
	* lto-streamer-in.c (input_function): Likewise.
	(lto_read_body): Do not override them here.

2010-01-12  Joseph Myers  <joseph@codesourcery.com>

	PR c/42708
	* c-typeck.c (build_c_cast): Fold value cast to union type before
	wrapping it in a CONSTRUCTOR.

2010-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/42699
	* cse.c (cse_insn): Optimize lhs ZERO_EXTRACT if only CONST_INTs are
	involved.

2010-01-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/mips/iris6.h (SUBTARGET_DONT_WARN_UNUSED_SPEC,