@@ -1,3 +1,8 @@
+2010-01-13  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/42703
+	* testsuite/gcc.c-torture/compile/pr42703.c: New test.
+
 2010-01-13  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/42705
